syntax = "proto3";

package com.learn.grpc.calculator;

option java_multiple_files = true;

message CalculatorRequest {
    int32 firstNumber = 1;
    int32 secondNumber = 2;
}

message CalculatorResponse {
    int64 result = 1;
}

service CalculatorService {
    rpc sum(CalculatorRequest) returns (CalculatorResponse) {};
}
